[TASK] user message

--- a/games/one-second/index.html
+++ b/games/one-second/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1 Second Challenge - Timing Games</title>
+    <title>1 Second Challenge - Angry Games</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <a href="../../index.html" class="back-button">← Back</a>
     <div class="container">
-        <a href="../../index.html" class="back-button">← Back to Games</a>
-        <h1>1 Second Challenge</h1>
-        <p>Try to stop exactly at 1.000 seconds!</p>
         <div id="timer">0.000</div>
         <button id="gameBtn">Start</button>
+        <div id="welcomeMessage"></div>
+        <div id="failureMessage"></div>
     </div>
     <script src="script.js"></script>
 </body>
