[TASK] Add title to game

--- a/games/one-second/index.html
+++ b/games/one-second/index.html
@@ -9,6 +9,8 @@
 <body>
     <a href="../../index.html" class="back-button">← Back</a>
     <div class="container">
+        <h2>1 Second Challenge</h2>
+        <p>Try to stop exactly at 1.000 seconds!</p>
         <div id="timer">0.000</div>
         <button id="gameBtn">Start</button>
         <div id="welcomeMessage"></div>
