--- a/games/one-second/index.html
+++ b/games/one-second/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a href="../../index.html" class="back-button">← Back</a>
+    <canvas id="particleCanvas" class="particle-canvas"></canvas>
     <div class="container">
         <h2>1 Second Challenge</h2>
         <p>Try to stop exactly at 1.000 seconds!</p>
