--- a/games/one-second/index.html
+++ b/games/one-second/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1 Second Challenge - Angry Games</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
     <a href="../../index.html" class="back-button">← Back</a>
